added replication of diploma results

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 data/
 .ipynb_checkpoints/
+diploma_retry/data/
+diploma_retry/.ipynb_checkpoints/
+diploma_retry/hymenoptera_data/
+diploma_retry/quanvolution/
+diploma_retry/hymenoptera_data.zip
+diploma_retry/hymenoptera_data.zip.1
